# interop-example

./: .gitignore  Dockerfile  README.md  _config.yml  cabal.project
doc/: technical-report.md
docs/: examples-compilation.md  interoperability-report.md  technical-report.md
dpella-base/: CHANGELOG.md  dpella-base.cabal
dpella-base/src/DPella/: Noise.hs  RawVal.hs
dpella-ffi/: dpella-ffi.cabal
dpella-ffi/mysql_plugin/: Makefile  dpella_ffi_mysql.c  init.sql
dpella-ffi/pg_extension/: Makefile  dpella-ffi-ext--1.0.sql  dpella-ffi-ext.c  dpella-ffi-ext.control
dpella-ffi/src/: DPella_FFI.hs
dpella-mysql/: dpella-mysql.cabal
dpella-mysql/src/DPella/: MySQL.hs
dpella-postgres/: dpella-postgresql.cabal
dpella-postgres/src/DPella/: Postgres.hs
dpella-sqlite/: dpella-sqlite.cabal
dpella-sqlite/src/DPella/: SQLite.hs
example/: CHANGELOG.md  interop-example.cabal
example/app/: Main.hs
fig/: NGI Sargasso Images.pptx
scripts/: init-mysql.sh  init-postgresql.sh  quick-setup.sh
