cabal-version:      3.0
name:               dpella-base
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Matthias Pall Gissurarson
maintainer:         matti@dpella.io 
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  DPella.Noise,
                      DPella.RawVal
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1, random, text
    hs-source-dirs:   src
    default-language: Haskell2010
