cabal-version:      3.0
name:               dpella-ffi
version:            0.1.0.0
license:            MPL-2.0
author:             Matthias Pall Gissurarson
maintainer:         matti@dpella.io 
build-type:         Simple
extra-doc-files:    CHANGELOG.md

foreign-library dpella-ffi
  type: native-shared
  hs-source-dirs: src
  build-depends:    base >= 4.18 && < 5, dpella-base
  other-modules: DPella_FFI
  default-language: Haskell2010
  lib-version-info: 1:0:0

library
    exposed-modules:  DPella_FFI
    build-depends:    base >= 4.18 && < 5, dpella-base
    hs-source-dirs:   src
    default-language: Haskell2010
